// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Mission Resolution Behavior > handles GitHub CLI failure gracefully (Phase 2) 1`] = `
{
  "history": [
    "[<cwd>] gh pr view 999 --json headRefName --template {{.headRefName}}",
  ],
  "manifest": {
    "action": "chat",
    "branchName": "999",
    "bundleDir": "<tmp>/bundle",
    "containerName": "test-repo-999",
    "env": {
      "COLORTERM": "truecolor",
      "FORCE_COLOR": "3",
      "TERM": "xterm-256color",
    },
    "geminiAuthMode": "env-chain",
    "gitAuthMode": "repo-token",
    "identifier": "999",
    "isDev": false,
    "mirrorPath": "<tmp>",
    "policyPath": "<tmp>/.gemini/policies/workspace-policy.toml",
    "repoName": "test-repo",
    "sensitiveEnv": undefined,
    "sessionName": "test-repo/999",
    "tempDir": "<tmp>/orbit-git-worktrees/test-repo/999",
    "upstreamUrl": "https://github.com/google-gemini/gemini-cli.git",
    "verbose": undefined,
    "workDir": "<tmp>/orbit-git-worktrees/test-repo/999",
    "workspaceName": "test-repo/999",
  },
}
`;

exports[`Mission Resolution Behavior > records resolution for GCE (Starfleet) providers 1`] = `
{
  "history": [],
  "manifest": {
    "action": "chat",
    "branchName": "st-1",
    "bundleDir": undefined,
    "containerName": "orbit-st-1",
    "env": {
      "COLORTERM": "truecolor",
      "FORCE_COLOR": "3",
      "TERM": "xterm-256color",
    },
    "geminiAuthMode": "env-chain",
    "gitAuthMode": "repo-token",
    "identifier": "st-1",
    "isDev": false,
    "mirrorPath": undefined,
    "policyPath": "/orbit/data/.gemini/policies/workspace-policy.toml",
    "repoName": "test-repo",
    "sensitiveEnv": undefined,
    "sessionName": "test-repo/st-1",
    "tempDir": "/orbit/data/workspaces/test-repo/st-1",
    "upstreamUrl": "https://github.com/google-gemini/gemini-cli.git",
    "verbose": undefined,
    "workDir": "/orbit/data/workspaces/test-repo/st-1",
    "workspaceName": "test-repo/st-1",
  },
}
`;

exports[`Mission Resolution Behavior > records resolution of a complex branch name with slugification 1`] = `
{
  "history": [],
  "manifest": {
    "action": "chat",
    "branchName": "feature/big-change-v2",
    "bundleDir": "<tmp>/bundle",
    "containerName": "test-repo-feature-big-change-v2",
    "env": {
      "COLORTERM": "truecolor",
      "FORCE_COLOR": "3",
      "TERM": "xterm-256color",
    },
    "geminiAuthMode": "env-chain",
    "gitAuthMode": "repo-token",
    "identifier": "feature-big-change-v2",
    "isDev": false,
    "mirrorPath": "<tmp>",
    "policyPath": "<tmp>/.gemini/policies/workspace-policy.toml",
    "repoName": "test-repo",
    "sensitiveEnv": undefined,
    "sessionName": "test-repo/feature-big-change-v2",
    "tempDir": "<tmp>/orbit-git-worktrees/test-repo/feature-big-change-v2",
    "upstreamUrl": "https://github.com/google-gemini/gemini-cli.git",
    "verbose": undefined,
    "workDir": "<tmp>/orbit-git-worktrees/test-repo/feature-big-change-v2",
    "workspaceName": "test-repo/feature-big-change-v2",
  },
}
`;

exports[`Mission Resolution Behavior > records resolution of a numeric PR ID via GH CLI 1`] = `
{
  "history": [
    "[<cwd>] gh pr view 123 --json headRefName --template {{.headRefName}}",
  ],
  "manifest": {
    "action": "chat",
    "branchName": "",
    "bundleDir": "<tmp>/bundle",
    "containerName": "test-repo-123",
    "env": {
      "COLORTERM": "truecolor",
      "FORCE_COLOR": "3",
      "TERM": "xterm-256color",
    },
    "geminiAuthMode": "env-chain",
    "gitAuthMode": "repo-token",
    "identifier": "123",
    "isDev": false,
    "mirrorPath": "<tmp>",
    "policyPath": "<tmp>/.gemini/policies/workspace-policy.toml",
    "repoName": "test-repo",
    "sensitiveEnv": undefined,
    "sessionName": "test-repo/123",
    "tempDir": "<tmp>/orbit-git-worktrees/test-repo/123",
    "upstreamUrl": "https://github.com/google-gemini/gemini-cli.git",
    "verbose": undefined,
    "workDir": "<tmp>/orbit-git-worktrees/test-repo/123",
    "workspaceName": "test-repo/123",
  },
}
`;

exports[`Mission Resolution Behavior > records resolution of shorthand id:action syntax 1`] = `
{
  "history": [],
  "manifest": {
    "action": "experiment",
    "branchName": "456",
    "bundleDir": "<tmp>/bundle",
    "containerName": "test-repo-456-experiment",
    "env": {
      "COLORTERM": "truecolor",
      "FORCE_COLOR": "3",
      "TERM": "xterm-256color",
    },
    "geminiAuthMode": "env-chain",
    "gitAuthMode": "repo-token",
    "identifier": "456",
    "isDev": false,
    "mirrorPath": "<tmp>",
    "policyPath": "<tmp>/.gemini/policies/workspace-policy.toml",
    "repoName": "test-repo",
    "sensitiveEnv": undefined,
    "sessionName": "test-repo/456/experiment",
    "tempDir": "<tmp>/orbit-git-worktrees/test-repo/456",
    "upstreamUrl": "https://github.com/google-gemini/gemini-cli.git",
    "verbose": undefined,
    "workDir": "<tmp>/orbit-git-worktrees/test-repo/456",
    "workspaceName": "test-repo/456",
  },
}
`;
